# newmedia

./: .env.automation  .env.backup  .env.backup.20250802_114429  .env.bak  .env.example  .env.optimized  .env.production  .env.production.template  .env.template  .generated_passwords.txt  .gitignore  ACCESSIBILITY_FIXES_CODE.md  ACTIONABLE_IMPROVEMENT_PLAN_2025.md  ADVANCED_SECURITY_DEPLOYMENT_GUIDE.md  AGENT_CONSENSUS_IMPROVEMENTS_2025.md  AGENT_REVIEW_IMPLEMENTATION_SUMMARY.md  API_INTEGRATION_SUMMARY.md  ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_IMPROVEMENTS_2025.md  ARR_INTEGRATION_FILES.md  ARR_INTEGRATION_SUMMARY.md  AUTHENTICATION_SECURITY_AUDIT_REPORT.md  AUTO-CONFIG-FIX-README.md  AUTOMATION_COMPLETE.md  AUTOMATION_SETUP_GUIDE.md  AUTO_CONFIG_COMPLETE_DASHBOARD.html  AUTO_CONFIG_DASHBOARD.html  BACKEND_API_INTEGRATION_SUMMARY.md  BEGINNER_START_GUIDE.md  BLOCKCHAIN_DEPLOYMENT_GUIDE.md  CLEANUP_SUMMARY.md  CLOUD_NATIVE_MEDIA_ARCHITECTURE_2025.md  CODE_QUALITY_ANALYSIS_REPORT.md  COMPLETE_PROJECT_REVIEW.md  COMPLETE_REVIEW_SUCCESS.md  COMPREHENSIVE_IMPROVEMENT_RECOMMENDATIONS.md  COMPREHENSIVE_PROJECT_REVIEW_2025.md  COMPREHENSIVE_REQUIREMENTS_DOCUMENT.md  COMPREHENSIVE_TESTING_REPORT_2025.md  DASHBOARD-ACCESS-GUIDE.md  (+284 more)
.github/: CI-CD-README.md  dependabot.yml  renovate.json
.hive-mind/: config.json
.swarm/: memory.db
TEST_REPORTS/: INTEGRATION_TEST_SUMMARY.md  api-integration-tests.sh  comprehensive_functionality_test.md  integration-test-suite.py  (+4 more)
edge-functions/wasm-modules/: Cargo.toml
edge-functions/wasm-modules/image-optimizer/src/: lib.rs
(+790 files in other folders)
