[workspace]
members = [
    "image-optimizer",
    "video-processor",
    "manifest-optimizer",
    "security-filter",
    "ml-inference"
]

[workspace.package]
version = "2.0.0"
authors = ["Media Platform Team"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["webp", "jpeg", "png"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = "fat"